# kubernetes_game

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  models.py  schemas.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  cards.py  rooms.py  users.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/services/: gameplay.py  room_ws.py
cards/: base_en.csv  card_list.csv  card_list_fr.csv  card_list_junior.csv  card_list_ru.csv  cards_back.html  cards_back_de.html  cards_back_en.html  cards_back_es.html  cards_back_fr.html  cards_back_ja.html  cards_back_ru.html  cards_back_uk.html  cards_back_zh.html  cards_print.html  cards_print_de.html  cards_print_en.html  cards_print_es.html  cards_print_fr.html  cards_print_ja.html  cards_print_ru.html  cards_print_uk.html  cards_print_zh.html
cards/data/: cards_en.json
cards/i18n/: ru.json
docs/: online_platform.md
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/src/: main.tsx
frontend/src/api/: client.ts  rooms.ts
frontend/src/components/: NavBar.tsx
frontend/src/hooks/: useCardCatalog.ts  useGuestUser.ts  useRooms.ts
frontend/src/pages/: AppLayout.tsx  HomePage.tsx  LobbyPage.tsx  (+1 more)
playmats/: kids_player_mat.md  player_cluster_aid.md
print_and_play/: print_guide.md
rules/: junior_mode.md  junior_quick_reference.md  quick_reference.md  rulebook.md
tests/: test_simulation.py
tools/: game_simulator.py  generate_card_sheets.py
