[tool.poetry]
name = "kube-clash-backend"
version = "0.1.0"
description = "Backend for Kubernetes Cluster Clash online platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlmodel = "^0.0.24"
asyncpg = "^0.29.0"
redis = "^5.0.0"
pydantic-settings = "^2.3.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.4"
isort = "^5.13.2"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
